2008-01-21  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operations.cc (enough_battery_to_update): Improved the code
	to check the battery status. Fixed a memory leak (N79022).

	* src/dbus.h (struct battery_info): Changed the 'chargin' field to
	have a gboolean datatype, instead of gint (N79022).

	* src/dbus.cc (receive_battery_status_update): Some needed changes
	due to the datatype modification commented above (N79022).

2008-01-18  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/update-notifier.c (update_notifier_init): Connect a callback
	for managing display events (N79304).
	(display_event_cb): Stop the notifier icon from blinking when the
	display is blank, and restore to its blinking state (if needed)
	when the display is not blank again (N79304).
	(check_for_updates): Cleaned up a warning on compilation.
	(xexp_list_sort): Likewise.

	* src/operations.cc (ip_check_upgrade_reply): Skip the cert
	information of the reply only if not upgrading (N78908).

	* src/mime-open.c: Added two required includes, to avoid
	compilation warnings.

	* src/mime-server.c: Added two required includes, to avoid
	compilation warnings.

	* src/apt-worker-bin.cc (substreq): Cleaned up a warning on
	compilation.

	* utils/maemo-select-menu-location-main.c
	(selection_location_response): Cleaned up a warning on
	compilation.

2008-01-17  Mario Sanchez Prada  <msanchez@maemo.org>

	Added a new APTCMD_DOWNLOAD_PACKAGE command, to allow downloading
	packages separately from installing them from the frontend. Quite
	useful for some checks, such as the check for enough free space,
	when installing/upgrading packages, or checking for enough battery
	left to upgrade packages.

	* src/apt-worker-proto.h: Added APTCMD_DOWNLOAD_PACKAGE.

	* src/apt-worker-bin.cc (get_free_space): Removed, since it's no
	longer need from now on, as this check is going to be performed
	from the frontend, at operations.cc.
	(handle_request): Added a case for the new command, which