@@ -1019,8 +1019,6 @@ ip_check_upgrade_reply (int cmd, apt_proto_decoder *dec, void *data)
 {
   ip_clos *c = (ip_clos *)data;
 
-  package_info *pi = (package_info *)(c->cur->data);
-
   c->upgrade_names = NULL;
   c->upgrade_versions = NULL;
 
@@ -1030,30 +1028,27 @@ ip_check_upgrade_reply (int cmd, apt_proto_decoder *dec, void *data)
       return;
     }
 
-  /* Skip the cert information of the reply if not upgrading.
+  /* Skip the cert information of the reply.
    */
-  if (pi->installed_version == NULL)
+  while (!dec->corrupted ())
     {
-      while (!dec->corrupted ())
-	{
-	  apt_proto_pkgtrust trust = apt_proto_pkgtrust (dec->decode_int ());
-	  if (trust == pkgtrust_end)
-	    break;
-      
-	  dec->decode_string_in_place ();  // name
-	}
+      apt_proto_pkgtrust trust = apt_proto_pkgtrust (dec->decode_int ());
+      if (trust == pkgtrust_end)
+	break;
 
-      while (!dec->corrupted ())
-	{
-	  char *name = dec->decode_string_dup ();
-	  if (name == NULL)
-	    break;
+      dec->decode_string_in_place ();  // name
+    }
 
-	  char *version = dec->decode_string_dup ();
+  while (!dec->corrupted ())
+    {
+      char *name = dec->decode_string_dup ();
+      if (name == NULL)
+	break;
 
-	  push (c->upgrade_names, name);
-	  push (c->upgrade_versions, version);
-	}
+      char *version = dec->decode_string_dup ();
+
+      push (c->upgrade_names, name);
+      push (c->upgrade_versions, version);
     }
 
   int success = dec->decode_int ();
